[package]
name = "plto"
description = "pluto cli validator"
version = "0.0.1"
authors = ["EthanJustice <47954690+EthanJustice@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/EthanJustice/pluto"
repository = "https://github.com/EthanJustice/pluto"
license = "MIT"
publish = false

[dependencies]
clap = "~2.33.3"
pluto = { path = "../", version = "~0.0.1" }
